[project]
name = "BalanceDropperBL4"
version = "1"
authors = [{ name = "Ty-Gone" }]
description = "Drop items and loot pools from UI, Requires BlimGUI"

[tool.sdkmod]
name = "BalanceDropperBL4"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/RedxYeti/yeti-bl4-sdk/raw/refs/heads/main/GroundLootHelpers/GroundLootHelpers.sdkmod"
version = "1"
coop_support = "ClientSide"
