[project]
name = "BalanceDropperBL4"
version = "1"
authors = [{ name = "Ty-Gone" }]
description = "Drop items and loot pools from UI, Requires BlimGUI (BEWARE some itempool/itempool lists don't work or will crash you)"

[tool.sdkmod]
name = "BalanceDropperBL4"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/mantorofficial/BalanceDropperBl4/raw/refs/heads/main/BalanceDropper.sdkmod"
version = "1"
coop_support = "ClientSide"
